--- a/index.html
+++ b/index.html
@@ -431,10 +431,6 @@
       <div class="options">
         <div>A. 2.5V</div>
         <div>B. 250 mV</div>
-        <div>
-      <div class="options">
-        <div>A. 2.5V</div>
-        <div>B. 250 mV</div>
         <div>C. 25 mV</div>
         <div>D. 1V</div>
       </div>
@@ -612,6 +608,7 @@
       <button onclick="toggleAnswer('ans43')">Hiện đáp án</button>
       <div id="ans43" class="answer-text">Đáp án: B. attachInterrupt()</div>
     </div>
+</div>
 
     <div class="question">
       <b>44. Mode to trigger interrupt on any change?</b>
@@ -624,7 +621,7 @@
       <button onclick="toggleAnswer('ans44')">Hiện answer</button>
       <div id="ans44" class="answer-text">Đáp án: C. CHANGE</div>
     </div>
-
+</div>
     <div class="question">
       <b>45. What does detachInterrupt() do?</b>
       <div class="options">
